<resources>
    <string name="app_name">lab2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_list_fragment_title">Movie List</string>
    <string name="welcome_movie_details_fragment">Movie Details</string>
    <string name="add_a_movie">Add A New Movie</string>
    <string name="new_movie_dialog_title">Create A New Movie</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_director">Movie Director\n</string>
    <string name="movie_actors">Movie Actors</string>
    <string name="movie_description">Movie Description</string>
</resources>