<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".fragments.MovieDetailsFragment">

    <TextView
        android:id="@+id/movie_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_movie_details_fragment"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:textFontWeight="700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/movie_title_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="8dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/movie_details_title"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TextView
            android:id="@+id/movie_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textFontWeight="600"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/movie_description_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="8dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/movie_title_group"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TextView
            android:id="@+id/movie_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_description"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/movie_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textFontWeight="600"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/movie_director_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="8dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/movie_description_group"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TextView
            android:id="@+id/movie_director_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_director"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/movie_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textFontWeight="600"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/movie_actors_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="8dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/movie_director_group"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TextView
            android:id="@+id/movie_actors_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_actors"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/movie_actors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textFontWeight="600"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>